--- a/Frontend/parth-traders/src/app/user/home/home.component.css
+++ b/Frontend/parth-traders/src/app/user/home/home.component.css
@@ -23,11 +23,7 @@
 }
 
 #grid {
-  width: 1298px;
-  position: absolute;
-  left: 340px;
-  height: 1200px;
-  top: 180px;
+  display: inline-block;
 }
 
 #grid-selector {
