--- a/Frontend/parth-traders/src/app/user/home/home.component.html
+++ b/Frontend/parth-traders/src/app/user/home/home.component.html
@@ -7,11 +7,8 @@
       <div class="product-list-container">
         <h4 class="list-title">Most Selling Products</h4>
         <div id="grid">
-          <span *ngFor="let product of products">
-            <app-product [product]="product"></app-product>
-          </span>
+          <app-product *ngFor="let product of products" [product]="product"></app-product>
         </div>
-
       </div>
     </div>
   </div>
