--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -1,44 +1,26 @@
-<div class="product">
+<div class="product" [id]="'product_' + product.id" #productElement>
     <div class="info-large">
         <h4>{{ product.title }}</h4>
         <div class="sku">PRODUCT SKU: <strong>{{ product.sku }}</strong></div>
-
         <div class="price-big"><span>$43</span> ${{ product.price }}</div>
-
         <h3>COLORS</h3>
         <div class="colors-large">
             <ul>
-                <li>
-                    <a href="" (click)="changeColor()" style="background: #222"><span></span></a>
-                </li>
-                <li>
-                    <a href="" (click)="changeColor()" style="background: #6e8cd5"><span></span></a>
-                </li>
-                <li>
-                    <a href="" (click)="changeColor()" style="background: #f56060"><span></span></a>
-                </li>
-                <li>
-                    <a href="" (click)="changeColor()" style="background: #44c28d"><span></span></a>
+                <li *ngFor="let color of product.colors" (click)="changeColor(color)" [style.background]="color">
+                    <span></span>
                 </li>
             </ul>
         </div>
-
         <h3>SIZE</h3>
         <div class="sizes-large">
-            <span>XS</span>
-            <span>S</span>
-            <span>M</span>
-            <span>L</span>
-            <span>XL</span>
-            <span>XXL</span>
+            <span *ngFor="let size of product.sizes">{{ size }}</span>
         </div>
-
         <button class="add-cart-large" (click)="addCartLarge()">Add To Cart</button>
     </div>
     <div class="make3D" (mouseenter)="liftCard()" (mouseleave)="dropCard()">
         <div class="product-front">
             <div class="shadow"></div>
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1.jpg" alt="" />
+            <img src="{{ product.image_paths[0] }}" alt="" />
             <div class="image_overlay"></div>
             <div class="add_to_cart" (click)="addToCart()">Add to cart</div>
             <div class="view_gallery" (click)="flipCardToBack()">View gallery</div>
@@ -47,12 +29,11 @@
                     <span class="product_price">${{ product.price }}</span>
                     <span class="product_name">{{ product.title }}</span>
                     <p>{{ product.type }}</p>
-
                     <div class="product-options">
                         <strong>SIZES</strong>
-                        <span>XS, S, M, L, XL, XXL</span>
+                        <span>{{ product.sizes.join(', ') }}</span>
                         <strong>COLORS</strong>
-                        <div class="colors">
+                        <div class="colors d-flex gap-1">
                             <div class="c-blue"><span></span></div>
                             <div class="c-red"><span></span></div>
                             <div class="c-white"><span></span></div>
@@ -62,19 +43,12 @@
                 </div>
             </div>
         </div>
-
         <div class="product-back">
             <div class="shadow"></div>
-            <div class="carousel">
+            <div class="carousel" #carouselContainer>
                 <ul class="carousel-container">
-                    <li>
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1.jpg" alt="" />
-                    </li>
-                    <li>
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/2.jpg" alt="" />
-                    </li>
-                    <li>
-                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/3.jpg" alt="" />
+                    <li *ngFor="let image of product.image_paths">
+                        <img src="{{ image }}" alt="" />
                     </li>
                 </ul>
                 <div class="arrows-perspective">
