--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -6,7 +6,7 @@
     transform-style: preserve-3d;
     transition: transform 5s;
     float: left;
-    margin-right: 23px;
+    margin: 10px 10px 10px 10px;
     -webkit-transition: width 500ms ease-in-out;
     -moz-transition: width 500ms ease-in-out;
     -ms-transition: width 500ms ease-in-out;
@@ -471,7 +471,7 @@ div.floating-cart .stats-container {
 }
 
 .carousel img {
-    margin-top: -22px;
+    /* margin-top: -22px; */
     width: 110%;
 }
 
@@ -637,16 +637,6 @@ div.floating-cart .stats-container {
     -ms-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-    -webkit-transition: all 100ms ease-out;
-    -moz-transition: all 100ms ease-out;
-    -ms-transition: all 100ms ease-out;
-    -o-transition: all 100ms ease-out;
-    transition: all 100ms ease-out;
-}
-
-.cx.s1 {
-    right: 0;
-    width: 30px;
     -webkit-transition: all 100ms ease-out;
     -moz-transition: all 100ms ease-out;
     -ms-transition: all 100ms ease-out;
