added feature to change view and added cart container

--- a/Frontend/parth-traders/src/app/user/home/home.component.css
+++ b/Frontend/parth-traders/src/app/user/home/home.component.css
@@ -26,13 +26,18 @@
   display: inline-block;
 }
 
-#grid-selector {
+.grid-selector {
   height: 10px;
-  width: 1291px;
-  padding: 40px 0 40px 30px;
+  width: 1163px;
+  padding: 40px 57px 40px 45px;
   float: left;
   color: #5d5f68;
   font-size: 14px;
+}
+
+.grid-selector-large {
+  padding: 40px 10px 40px 20px !important;
+  width: 1321px !important;
 }
 
 #grid-menu {
@@ -52,6 +57,7 @@
   width: 25px;
   height: 25px;
   list-style: none;
+  cursor: pointer;
 }
 
 #grid-menu li a {
