--- a/Frontend/parth-traders/src/app/user/home/home.component.html
+++ b/Frontend/parth-traders/src/app/user/home/home.component.html
@@ -4,14 +4,26 @@
       src="https://images-eu.ssl-images-amazon.com/images/G/02/digital/video/merch2016/Hero/Covid19/Generic/GWBleedingHero_ENG_COVIDUPDATE__XSite_1500x600_PV_en-GB._CB428684220_.jpg"
       alt="" />
     <div class="d-flex">
-      <div class="sidebar">
+      <div class="sidebar-container" *ngIf="!isLargeGrid" [@fadeInOut] width="300">
         <app-sidebar></app-sidebar>
       </div>
       <div class="home__row">
         <div class="product-list-container">
-          <h4 class="list-title">Most Selling Products</h4>
+          <div class="product-list-header">
+            <div id="grid-selector" class="grid-selector" [class]="isLargeGrid ? 'grid-selector-large' : ''">
+              <div id="grid-menu">
+                View:
+                <ul class="d-flex gap-2">
+                  <li class="largeGrid" (click)="switchToLargeGrid()"><a [class]="isLargeGrid ? 'active':''"></a></li>
+                  <li class="smallGrid" (click)="switchToSmallGrid()"><a [class]="isLargeGrid ? '':'active'"></a></li>
+                </ul>
+              </div>
+              Showing 1-9 of 48 results
+            </div>
+          </div>
           <div id="grid">
-            <app-product *ngFor="let product of products" [product]="product"></app-product>
+            <app-product *ngFor="let product of products" [product]="product"
+              [events]="changeGridToLargeSubject$.asObservable()"></app-product>
           </div>
         </div>
       </div>
