--- a/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
+++ b/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
@@ -1,5 +1,7 @@
 <div id="sidebar">
-    <app-shopping-cart></app-shopping-cart>
+    <div class="cart-container">
+        <app-shopping-cart></app-shopping-cart>
+    </div>
     <h3>CATEGORIES</h3>
     <div class="checklist categories">
         <ul>
