--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -708,3 +708,141 @@ div.shadow {
     background: -moz-linear-gradient(right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
     background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
 }
+
+div.floating-cart {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 315px;
+    height: 480px;
+    background: #fff;
+    z-index: 200;
+    overflow: hidden;
+    box-shadow: 0px 5px 31px -1px rgba(0, 0, 0, 0.15);
+    display: none;
+}
+
+div.floating-cart.moveToCart {
+    left: 75px !important;
+    top: 55px !important;
+    width: 47px;
+    height: 47px;
+    -webkit-transition: all 800ms ease-in-out;
+    -moz-transition: all 800ms ease-in-out;
+    -ms-transition: all 800ms ease-in-out;
+    -o-transition: all 800ms ease-in-out;
+    transition: all 800ms ease-in-out;
+}
+
+body.MakeFloatingCart div.floating-cart.moveToCart {
+    left: 90px !important;
+    top: 140px !important;
+    width: 21px;
+    height: 22px;
+    box-shadow: 0px 5px 31px -1px rgba(0, 0, 0, 0);
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -ms-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+div.cart-icon-top {
+    position: absolute;
+    background: #fff url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/cart.png") 0 -3px no-repeat;
+    margin: 0;
+    width: 21px;
+    height: 3px;
+    z-index: 1;
+    top: 140px;
+    left: 90px;
+}
+
+div.cart-icon-bottom {
+    position: absolute;
+    background: #fff url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/cart.png") 0 -3px no-repeat;
+    margin: 0;
+    width: 21px;
+    height: 19px;
+    z-index: 1;
+    top: 143px;
+    left: 90px;
+}
+
+body.MakeFloatingCart div.cart-icon-top {
+    z-index: 30;
+}
+
+body.MakeFloatingCart div.cart-icon-bottom {
+    z-index: 300;
+}
+
+.cart-item {
+    height: 62px;
+    width: 210px;
+    margin-top: 5px;
+    position: relative;
+    background: #fff;
+    -webkit-transition: all 1000ms ease-out;
+    -moz-transition: all 1000ms ease-out;
+    -ms-transition: all 1000ms ease-out;
+    -o-transition: all 1000ms ease-out;
+    transition: all 1000ms ease-out;
+}
+
+.cart-item.flash {
+    background: #fffeb0;
+}
+
+.cart-item-border {
+    position: absolute;
+    bottom: 0;
+    left: 45px;
+    background: #edeff0;
+    height: 1px;
+    width: 230px;
+}
+
+.cart-item .img-wrap {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border: 1px solid #edeff0;
+    float: left;
+    margin-right: 10px;
+}
+
+.cart-item img {
+    width: 100%;
+    position: relative;
+}
+
+.cart-item strong {
+    color: #5ff7d2;
+    font-size: 16px;
+}
+
+.cart-item span {
+    color: #393c45;
+    display: block;
+    font-size: 14px;
+}
+
+.cart-item .delete-item {
+    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/delete-item.png") 0 0 no-repeat;
+    width: 15px;
+    height: 15px;
+    float: right;
+    margin-right: -16px;
+    display: none;
+}
+
+.cart-item:hover .delete-item {
+    display: block;
+    cursor: pointer
+}
+
+/* **********************need to check below styles******* */
+#sidebar img {
+    margin-top: 6px;
+}
