--- a/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.css
+++ b/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.css
@@ -86,3 +86,15 @@ body.MakeFloatingCart div.cart-icon-bottom {
     font-size: 14px;
     letter-spacing: 1px;
 }
+
+#checkout {
+    border: 2px solid #5ff7d2;
+    font-size: 13px;
+    font-weight: 700;
+    padding: 3px 9px;
+    position: absolute;
+    top: 137px;
+    left: 181px;
+    color: #5ff7d2;
+    display: none;
+}
