--- a/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
+++ b/Frontend/parth-traders/src/app/user/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,5 @@
 <h3>CART</h3>
-<div #cartIconTop class="cart-icon-top"></div>
+<div class="cart-icon-top"></div>
 
 <div class="cart-icon-bottom"></div>
 
