added page scrolling feature for results

--- a/Frontend/parth-traders/src/app/user/home/home.component.css
+++ b/Frontend/parth-traders/src/app/user/home/home.component.css
@@ -116,3 +116,8 @@ div.floating-cart.moveToCart {
   -o-transition: all 200ms ease-out;
   transition: all 200ms ease-out;
 }
+
+.loading-indicator {
+  text-align: center;
+  padding: 20px;
+}
