feature: init filter by category

--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -28,7 +28,7 @@
                 <div class="stats-container">
                     <span class="product_price">${{ product.price }}</span>
                     <span class="product_name">{{ product.title }}</span>
-                    <p>{{ product.type }}</p>
+                    <p>{{ product.category }}</p>
                     <div class="product-options">
                         <strong>SIZES</strong>
                         <span>{{ product.sizes.join(', ') }}</span>
