--- a/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.css
+++ b/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.css
@@ -89,8 +89,11 @@
     margin: 0;
     float: none;
     position: absolute;
-    top: 0;
-    left: 0;
+    left: 1px;
+}
+
+.checklist a span .y {
+    left: 2px !important;
 }
 
 .checklist a .x {
