added filter by categories and product types feature

--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -27,7 +27,7 @@
             <div class="stats">
                 <div class="stats-container">
                     <span class="product_price">${{ product.price }}</span>
-                    <span class="product_name">{{ product.title }}</span>
+                    <span class="product_name">{{ product.productType }}</span>
                     <p>{{ product.category }}</p>
                     <div class="product-options">
                         <strong>SIZES</strong>
