--- a/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.css
+++ b/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.css
@@ -52,6 +52,7 @@
 }
 
 .checklist li a {
+    cursor: pointer;
     color: #676a74;
     text-decoration: none;
     -webkit-transition: all 300ms ease-out;
@@ -144,27 +145,29 @@
     border-color: #8d939f;
 }
 
-.colors ul,
+.product-types ul,
 .sizes ul {
     float: left;
-    width: 130px;
 }
 
-.colors ul li {
+.product-types ul li {
     padding-left: 21px;
 }
 
-.colors a span {
-    border: none;
+.product-types a span {
     position: relative;
     border-radius: 100%;
-    background-color: #eae3d3;
+    background-color: #ffffff;
     width: 13px;
     height: 13px;
     margin-left: -20px;
 }
 
-.colors a:hover span {
+.product-types ul li.active a>span {
+    background-color: #00ffc1;
+}
+
+.product-types a:hover span {
     width: 15px;
     height: 15px;
     margin-top: 3px;
