--- a/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
+++ b/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
@@ -17,77 +17,19 @@
         </ul>
     </div>
 
-    <h3>COLORS</h3>
-    <div class="checklist colors">
+    <h3>Product Types</h3>
+    <div class="checklist product-types">
         <ul>
-            <li>
-                <a href=""><span></span>Beige</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #222"></span>Black</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #6e8cd5"></span>Blue</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #f56060"></span>Brown</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #44c28d"></span>Green</a>
-            </li>
-        </ul>
-
-        <ul>
-            <li>
-                <a href=""><span style="background: #999"></span>Grey</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #f79858"></span>Orange</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #b27ef8"></span>Purple</a>
-            </li>
-            <li>
-                <a href=""><span style="background: #f56060"></span>Red</a>
-            </li>
-            <li>
-                <a href=""><span style="
-                                background: #fff;
-                                border: 1px solid #e8e9eb;
-                                width: 13px;
-                                height: 13px;
-                            "></span>White</a>
-            </li>
-        </ul>
-    </div>
-
-    <h3>SIZES</h3>
-    <div class="checklist sizes">
-        <ul>
-            <li>
-                <a href=""><span></span>XS</a>
-            </li>
-            <li>
-                <a href=""><span></span>S</a>
-            </li>
-            <li>
-                <a href=""><span></span>M</a>
-            </li>
-        </ul>
-
-        <ul>
-            <li>
-                <a href=""><span></span>L</a>
-            </li>
-            <li>
-                <a href=""><span></span>XL</a>
-            </li>
-            <li>
-                <a href=""><span></span>XXL</a>
+            <li *ngFor="let type of productTypeKeys" (click)="setActiveProductType(type)"
+                [class.active]="type === filterCriteria.activeProductType">
+                <a class=""><span></span>{{type}}</a>
             </li>
         </ul>
     </div>
 
     <h3>PRICE RANGE</h3>
-    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/price-range.png" alt="" />
+    <mat-slider min="200" max="500">
+        <input value="300" matSliderStartThumb>
+        <input value="400" matSliderEndThumb>
+    </mat-slider>
 </div>
