Added @angular-slider/ngx-slider dependency and implemented ngx-slider in sidebar component, replaced mat-slider with ngx-slider, and updated package-lock.json and package.json files accordingly.

--- a/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
+++ b/Frontend/parth-traders/src/app/user/sidebar/sidebar.component.html
@@ -28,8 +28,5 @@
     </div>
 
     <h3>PRICE RANGE</h3>
-    <mat-slider min="200" max="500">
-        <input value="300" matSliderStartThumb>
-        <input value="400" matSliderEndThumb>
-    </mat-slider>
+    <ngx-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="sliderOptions"></ngx-slider>
 </div>
